Fixed typo in Inno Setup translation

--- a/translations/DE.ini
+++ b/translations/DE.ini
@@ -3261,7 +3261,7 @@ ExplorerInterface1="- Nur entferntes Verzeichnis"
 ExplorerInterface2="- Tastaturkürzel wie im Windows Explorer"
 ExplorerInterface3="- drag && drop"
 UserSettingsOverview="Anfängliche Benutzereinstellungen (können später angepasst werden)"
-FinishedRestartDragExtLabel="Um die Installation von WinSCP abzuschließen, ist ein Neustart des Computers notwendig. Eine neue Version der Drag & Drop Erweiterung wird dann geladen. Sie können Ihren Computer auch später neu starten, wenn Sie diese Erweeiterung nicht benötigen. Wollen Sie den Neustart jetzt durchführen?"
+FinishedRestartDragExtLabel="Um die Installation von WinSCP abzuschließen, ist ein Neustart des Computers notwendig. Eine neue Version der Drag & Drop Erweiterung wird dann geladen. Sie können Ihren Computer auch später neu starten, wenn Sie diese Erweiterung nicht benötigen. Wollen Sie den Neustart jetzt durchführen?"
 PleaseDonate="Bitte erwägen Sie die Weiterentwicklung von WinSCP mit einer Spende zu unterstützen."
 AboutDonations="Über Spenden"
 Donate="Spende %s"
